SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

INCLUDE_DIRECTORIES(${Qt5Widgets_INCLUDES} ${Qt5Gui_INCLUDES}
  ${Qt5Xml_INCLUDES} ${VLE_INCLUDE_DIRS} ${GVLE_INCLUDE_DIRS}
 ${Boost_INCLUDE_DIRS} ${VLE_BINARY_DIR}/src ${VLE_SOURCE_DIR}/src )

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS} ${VLE_LIBRARY_DIRS} ${GVLE_LIBRARY_DIRS})

SET(ExpCond_SOURCES plugin.cpp toolbar.cpp tab.cpp)

QT5_WRAP_UI(ui_toolbar_h  toolbar.ui)
QT5_WRAP_UI(ui_tab_h      tab.ui)

ADD_DEFINITIONS(${Qt5Widgets_DEFINITIONS} ${Qt5Gui_DEFINITIONS}
  ${Qt5Xml_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)

ADD_LIBRARY(ExperimentalConditions SHARED
  ${ExpCond_SOURCES}
  ${ui_toolbar_h}
  ${ui_tab_h} )

TARGET_LINK_LIBRARIES(ExperimentalConditions 
   ${INTL_LIB} ${GVLE_LIBRARIES} ${VLE_LIBRARIES}
   ${Qt5Widgets_LIBRARIES} ${Qt5Gui_LIBRARIES} ${Qt5Xml_LIBRARIES})

INSTALL(TARGETS ExperimentalConditions DESTINATION plugins/gvle/condition)
