SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})#used for QT4_WRAP_UI

INCLUDE_DIRECTORIES(${VLE_INCLUDE_DIRS} ${GVLE_INCLUDE_DIRS} 
  ${Boost_INCLUDE_DIRS} ${VLE_BINARY_DIR}/src 
  ${VLE_SOURCE_DIR}/src)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS} ${VLE_LIBRARY_DIRS} ${GVLE_LIBRARY_DIRS})

SET(LOG_SOURCES sim_log.cpp simtab.cpp thread.cpp
  widtoolbar.cpp)

QT4_WRAP_UI(ui_simtab_h simtab.ui)
QT4_WRAP_UI(ui_widtoolbar_h widtoolbar.ui)

ADD_LIBRARY(sim_log SHARED ${LOG_SOURCES}
  ${ui_simtab_h} ${ui_widtoolbar_h} )

TARGET_LINK_LIBRARIES(sim_log qwt
  ${QT_LIBRARIES} ${INTL_LIB} ${GVLE_LIBRARIES} ${VLE_LIBRARIES})

INSTALL(TARGETS sim_log
  RUNTIME DESTINATION
  plugins/gvle/simulating LIBRARY DESTINATION plugins/gvle/simulating)